--- a/.github/workflows/android-arm-cpu.yml
+++ b/.github/workflows/android-arm-cpu.yml
@@ -7,8 +7,8 @@ jobs:
     - uses: actions/checkout@v2
     - name: configure
       run: sudo apt-get remove cmake
-           echo yes | sdkmanager "ndk-bundle"
-           echo yes | sdkmanager "cmake;3.10.2.4988404"
+          #  echo yes | sdkmanager "ndk-bundle"
+          #  echo yes | sdkmanager "cmake;3.10.2.4988404"
            export ANDROID_NDK=$ANDROID_HOME/ndk-bundle
            export PATH=/usr/local/android-sdk/cmake/3.10.2.4988404/bin/:$PATH
     - name: build
