--- a/.github/workflows/android-arm-cpu.yml
+++ b/.github/workflows/android-arm-cpu.yml
@@ -7,5 +7,6 @@ jobs:
     - uses: actions/checkout@v2
     - name: configure
       run: sudo apt-get install attr
+           export ANDROID_NDK=$ANDROID_HOME/ndk-bundle
     - name: build
       run: ./scripts/build_android.sh
