--- a/.github/workflows/android-arm-cpu.yml
+++ b/.github/workflows/android-arm-cpu.yml
@@ -8,5 +8,6 @@ jobs:
     - name: configure
       run: sudo apt-get install attr
            export ANDROID_NDK=$ANDROID_HOME/ndk-bundle
+           export ANDROID_SDK=$ANDROID_HOME/sdk
     - name: build
       run: ./scripts/build_android.sh
