--- a/.github/workflows/android-arm-cpu.yml
+++ b/.github/workflows/android-arm-cpu.yml
@@ -9,6 +9,9 @@ jobs:
       run: sudo apt-get install attr
     - name: export
       run: export ANDROID_NDK=$ANDROID_HOME/ndk-bundle
-           export ANDROID_SDK=$ANDROID_HOME/sdk
+    - name: test
+      run: cd $ANDROID_HOME
+           ls
+           pwd
     - name: build
       run: ./scripts/build_android.sh
