android github-action

--- a/.github/workflows/android-arm-cpu.yml
+++ b/.github/workflows/android-arm-cpu.yml
@@ -11,7 +11,7 @@ jobs:
       run: export ANDROID_NDK=$ANDROID_HOME/ndk-bundle
     - name: test
       run: cd $ANDROID_HOME
-           ls
-           pwd
+           - ls
+           - pwd
     - name: build
       run: ./scripts/build_android.sh
