--- a/.github/workflows/android-arm-cpu.yml
+++ b/.github/workflows/android-arm-cpu.yml
@@ -7,9 +7,5 @@ jobs:
     - uses: actions/checkout@v2
     - name: configure
       run: sudo apt-get install attr
-    - name: export
-      run: export ANDROID_NDK=$ANDROID_HOME/ndk-bundle
-    - name: test
-      run: cd $ANDROID_HOME/ndk-bundle/build/cmake && ls && pwd
     - name: build
-      run: ./scripts/build_android.sh
+      run: export ANDROID_NDK=$ANDROID_HOME/ndk-bundle && ./scripts/build_android.sh
